# LaproscopicGame

./: .gitignore  README.md  project.godot  pyproject.toml
autoload/: Config.gd  GameState.gd  Sfx.gd  Telemetry.gd
config/drills/: pea_drop_plus.json
data/drills/: pea_drop_plus.tres
docs/: LapDrop_Stealth_Surgeon_Design.md
scenes/anatomy/: Tissue.gd  Tissue.tscn
scenes/core/: HUD.gd  HUD.tscn  Main.gd  Main.tscn
scenes/drills/PeaDrop/: Aperture.gd  Aperture.tscn  Bead.gd  Bead.tscn  Feeder.gd  Feeder.tscn  PeaDrop.gd  PeaDrop.tscn
scenes/instruments/: Instrument.gd  Instrument.tscn  LaparoscopeRig.gd  LaparoscopeRig.tscn
scripts/: DrillConfig.gd
scripts/scoring/: ScoreModel.gd
scripts/utils/: Easing.gd
src/lapdrop/: __init__.py  app.py  config.py  entities.py  feeder.py  scoring.py  telemetry.py
ui/Menus/: DrillSelect.gd  DrillSelect.tscn  Title.gd  Title.tscn
